Added tests for images smaller than the crop

--- a/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
+++ b/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
@@ -56,6 +56,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon.png" />
     <Content Include="image.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
