--- a/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
+++ b/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
@@ -46,8 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="The_Resizer_class.cs" />
+    <Compile Include="ResizerSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestFixtureWorkingWithImages.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FluentImageResizing\FluentImageResizing.csproj">
