Added tests for portrait images, fixed method

--- a/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
+++ b/FluentImageResizing.Specs/FluentImageResizing.Specs.csproj
@@ -58,7 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.png" />
-    <Content Include="image.png" />
+    <Content Include="image200x300.png" />
+    <Content Include="image300x200.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
